--- a/package.json
+++ b/package.json
@@ -3,13 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "npm": "^8.3.0",
+    "rc-tabs": "^11.10.5",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
+    "react-bootstrap-range-slider": "^3.0.3",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.3"
+    "react-hook-form": "^7.22.5",
+    "react-hooks-helper": "^1.6.0",
+    "react-owl-carousel2": "^0.3.0",
+    "react-router-bootstrap": "^0.26.0",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "4.0.3",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.3.1",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
